support read/write with channels